<resources>
    <string name="app_name">LatihanFragment</string>
    <string name="home_menu">Home</string>
    <string name="favorit_menu">Favorit</string>
    <string name="about_menu">About</string>

    <string name="home_fragment">Home Fragment</string>
    <string name="favorite_fragment">Favorite Fragment </string>
    <string name="nim">180010038 </string>
    <string name="nama">Lulu Ul Maknun</string>


    <string name="cont_desc_logo">Logo</string>
    <string name="no">NO</string>
    <string name="team">Team</string>
    <string name="desc">Description</string>

    <string-array name="club_name">
        <item>Barcelona FC</item>
        <item>Real Madrid FC</item>
        <item>Bayern Munchen FC</item>
        <item>Manchester City FC</item>
        <item>Manchester United FC</item>
        <item>Chelsea FC</item>
        <item>AC Milan FC</item>
        <item>Arsenal FC</item>
    </string-array>

    <array name="club_image">
        <item>@drawable/img_barca</item>
        <item>@drawable/img_madrid</item>
        <item>@drawable/img_bayern</item>
        <item>@drawable/img_city</item>
        <item>@drawable/img_mu</item>
        <item>@drawable/img_chelsea</item>
        <item>@drawable/img_acm</item>
        <item>@drawable/img_arsenal</item>
    </array>

    <string-array name="club_detail">
        <item>Barcelona is one of the most widely supported teams in the world,
            and the club has one of the largest social media following in the world among sports teams.
            Barcelona players have won a record number of Ballon d\'Or awards (11),
            with recipients including Johan Cruyff,
            as well as a record number of FIFA World Player of the Year awards (7),
            with winners including Ronaldo, Romario, Ronaldinho and Rivaldo.</item>
        <item>Founded on 6 March 1902 as the Madrid Football Club,
            the club has traditionally worn a white home kit since inception.
            The word real is Spanish for "royal" and was bestowed to the club by
            King Alfonso XIII in 1920 together with the royal crown in the emblem.
            The team has played its home matches in the 81,044-capacity Santiago Bernabéu Stadium in downtown Madrid since 1947.</item>
        <item>FCB, Bayern Munich, or FC Bayern, is a German sports club based in Munich,
            Bavaria (Bayern). It is best known for its professional football team,
            which plays in the Bundesliga, the top tier of the German football league system,
            and is the most successful club in German football history,
            having won a record 28 national titles and 18 national cups.</item>
        <item>Commonly known as City, is a football club in Manchester, England.
            Founded in 1880 as St. Mark\'s (West Gorton),
            it became Ardwick Association Football Club in 1887 and Manchester City in 1894.
            The club\'s home ground is the City of Manchester Stadium in east Manchester, to which it moved in 2003,
            having played at Maine Road since 1923.</item>
        <item>Commonly known as Man. United or simply United, is a professional football club based in Old Trafford,
            Greater Manchester, England, that competes in the Premier League, the top flight of English football.
            Nicknamed "the Red Devils", the club was founded as Newton Heath LYR Football Club in 1878,
            changed its name to Manchester United in 1902 and moved to its current stadium, Old Trafford, in 1910.</item>
        <item>Chelsea Football Club is a professional football club in London,
            England, that competes in the Premier League. Founded in 1905,
            the club\'s home ground since then has been Stamford Bridge.</item>
        <item>Commonly referred to as A.C. Milan or simply Milan,
            is a professional football club in Milan, Italy, founded in 1899.
            The club has spent its entire history, with the exception of the 1980–81 and 1982–83 seasons,
            in the top flight of Italian football, known as Serie A since 1929–30.</item>
        <item>Arsenal Football Club is a professional football club based in Islington,
            London, England, that plays in the Premier League, the top flight of English football.
            The club has won 13 League titles, a record 13 FA Cups, two League Cups, the League Centenary Trophy,
            15 FA Community Shields, one UEFA Cup Winners\' Cup and one Inter-Cities Fairs Cup.</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mahasiswa_menu">Mahasiswa</string>

    <string name="nimm">NIM</string>
    <string name="namaa">NAMA</string>
    <string name="prodi">PRODI</string>

    <string name="nim_anda">Nim Anda</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="tambah">Tambah</string>

    <string-array name="daftar_prodi">
        <item>S1-Sistem Komputer</item>
        <item>S1-Sistem Informasi</item>
        <item>S1-Teknologi Informasi</item>
        <item>S1-Bisnis Digital</item>
        <item>D3-Manajemen Informatika</item>
    </string-array>

    <string name="update">Update</string>

</resources>
