<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:id="@+id/card_team">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/cont_desc_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team"
                android:textSize="15sp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
